HttpUnit release notes

Known problems:
    1. The "accept-charset" attribute for forms is ignored; the page content character set is used to encode any response.
       This behavior matches that currently used by IE and Navigator.

Limitations:
    1. JDK 1.2 or higher is required
    2. JavaScript support does not include document.write and some DOM properties


Revision History:
30-Oct-2002
Acknowledgements:
    Thanks to Troy Waldrep for fixing the JavaScript / HTML end-comment bug
    Thanks to EdA-qa mort-ora-y for findind and fixing the MIME-encoding bug

Problems fixed:
    1. JavaScript ending with --> rather than the proper end-comment // --> was being treated as a syntax error
    2. Bug #626822 Controls without names are no longer sent as part of a MIME-encoded message
    3. Bug #618140 JavaScript access to the file submit control value was not working

Additions:
    1. Added the HeadMethodWebRequest class

24-Oct-2002
Acknowledgements:
    Thanks to Andy Clark for help using the NekoHTML filter capability.

Additions:
    1. document.write and writeln are now supported for embedded uses
    2. ServletUnit now implements HttpServletRequest.getLocale() and getLocales()

22-Oct-2002
Acknowledgements:
    Thanks to Troy Waldrep for help with the new handling of response statuses and messages.

Problems fixed:
    1. A bad certificate on an https connection was incorrectly being flagged as a no-such-server exception. This
       is fixed on JDK 1.4, due to a correct in the JDK. On previous versions of the JDK, HttpUnit is using a
       workaround, which cannot detect the difference.

Notes:
    1. The exception HttpServerNotFoundException has been removed. When no server is found, HttpUnit now throws the
       standard exception: java.net.UnknownHostException
    2. The required jars are now included in the distribution, so it is not necessary to download them separately.
       This was an oversight.

21-Oct-2002
Problems fixed: